--- a/composer.json
+++ b/composer.json
@@ -30,10 +30,10 @@
         "source": "https://github.com/takielias/contract-resolver"
     },
     "require": {
-        "php": "^8.1",
-        "illuminate/support": "^10.0|^11.0|^12.0",
-        "illuminate/filesystem": "^10.0|^11.0|^12.0",
-        "illuminate/console": "^10.0|^11.0|^12.0"
+        "php": "^8.3",
+        "illuminate/support": "^11.0|^12.0",
+        "illuminate/filesystem": "^11.0|^12.0",
+        "illuminate/console": "^11.0|^12.0"
     },
     "require-dev": {
         "orchestra/testbench": "^8.0|^9.0",
